[gd_scene load_steps=13 format=3 uid="uid://hr4vrcuuvpoj"]

[ext_resource type="Script" uid="uid://pbmi7upegtxj" path="res://Script/Menu/create_lobby.gd" id="1_r5mhi"]
[ext_resource type="Script" uid="uid://b32k327cs6cov" path="res://Script/Menu/buttonAnimated.gd" id="2_v1lm1"]
[ext_resource type="Script" uid="uid://dgk3yq5oiu68m" path="res://Script/Menu/map.gd" id="3_6x6n1"]
[ext_resource type="Texture2D" uid="uid://b22mhxu20ktdx" path="res://Assets/2D/arrow.png" id="4_7mim1"]
[ext_resource type="Shader" uid="uid://cefk4ldpmlfex" path="res://Assets/2D/Shader/mapimage.tres" id="5_16jyb"]
[ext_resource type="Texture2D" uid="uid://78tev7xsyros" path="res://Assets/2D/Background/bind.png" id="6_ihm83"]
[ext_resource type="Texture2D" uid="uid://0105lkw7dsc7" path="res://Assets/2D/Background/mapa2.jpg" id="7_2x7i7"]
[ext_resource type="Texture2D" uid="uid://2mahwu87r12u" path="res://Assets/2D/Background/sunsent.jpg" id="8_sb7fq"]
[ext_resource type="Texture2D" uid="uid://cbgvisutpavkq" path="res://Assets/2D/arrow_right.png" id="9_fyuxw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1qje"]
resource_local_to_scene = true
shader = ExtResource("5_16jyb")
shader_parameter/x = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g41ys"]
resource_local_to_scene = true
shader = ExtResource("5_16jyb")
shader_parameter/x = -1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w375h"]
resource_local_to_scene = true
shader = ExtResource("5_16jyb")
shader_parameter/x = -1.05

[node name="CreateLobby" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_r5mhi")
metadata/_edit_use_anchors_ = true

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.296875
anchor_top = 0.297068
anchor_right = 0.703125
anchor_bottom = 0.702932
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Buttons" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="Tittle" type="Label" parent="Panel/Margin/Buttons"]
layout_mode = 2
text = "Create lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hs" type="HSeparator" parent="Panel/Margin/Buttons"]
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="Panel/Margin/Buttons"]
layout_mode = 2

[node name="NameLobby" type="LineEdit" parent="Panel/Margin/Buttons/hbox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "LobbyName"

[node name="ModeLobby" type="OptionButton" parent="Panel/Margin/Buttons/hbox"]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
script = ExtResource("2_v1lm1")
enable_x = false

[node name="Map" type="HBoxContainer" parent="Panel/Margin/Buttons"]
custom_minimum_size = Vector2(0, 145)
layout_mode = 2
script = ExtResource("3_6x6n1")

[node name="back" type="Button" parent="Panel/Margin/Buttons/Map"]
z_as_relative = false
custom_minimum_size = Vector2(40, 64)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
icon = ExtResource("4_7mim1")
icon_alignment = 1
script = ExtResource("2_v1lm1")
enable_y = false
metadata/_custom_type_script = "uid://b32k327cs6cov"

[node name="Image" type="Control" parent="Panel/Margin/Buttons/Map"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Map" type="TextureRect" parent="Panel/Margin/Buttons/Map/Image"]
material = SubResource("ShaderMaterial_c1qje")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("6_ihm83")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Map2" type="TextureRect" parent="Panel/Margin/Buttons/Map/Image"]
material = SubResource("ShaderMaterial_g41ys")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("7_2x7i7")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Map3" type="TextureRect" parent="Panel/Margin/Buttons/Map/Image"]
material = SubResource("ShaderMaterial_w375h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("8_sb7fq")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="front" type="Button" parent="Panel/Margin/Buttons/Map"]
custom_minimum_size = Vector2(40, 64)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
icon = ExtResource("9_fyuxw")
icon_alignment = 1
script = ExtResource("2_v1lm1")
enable_y = false
metadata/_custom_type_script = "uid://b32k327cs6cov"

[node name="hs2" type="HSeparator" parent="Panel/Margin/Buttons"]
layout_mode = 2
size_flags_vertical = 10

[node name="CreateLobby" type="Button" parent="Panel/Margin/Buttons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
text = "Create"
script = ExtResource("2_v1lm1")
enable_x = false
scale_max = 1.07
metadata/_custom_type_script = "uid://b32k327cs6cov"

[connection signal="pressed" from="Panel/Margin/Buttons/Map/back" to="Panel/Margin/Buttons/Map" method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Margin/Buttons/Map/front" to="Panel/Margin/Buttons/Map" method="_on_front_pressed"]
[connection signal="pressed" from="Panel/Margin/Buttons/CreateLobby" to="." method="_on_create_pressed"]
